--- a/app/src/main/res/layout/content_article.xml
+++ b/app/src/main/res/layout/content_article.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.sonel.newyorktimessearch.MainActivity"
     tools:showIn="@layout/activity_main">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <WebView
         android:id="@+id/wvArticle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+</LinearLayout>
 
 </RelativeLayout>
