--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -19,8 +19,7 @@
         android:id="@+id/rvArticles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_grey"
-        android:scrollbars="vertical"
+        android:background="@color/white"
         />
 
 </RelativeLayout>
