--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="material_grey">#eeeeee</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#f6d91d</color>
+    <color name="grey_300">#757975</color>
+    <color name="green">#10d910</color>
+    <color name="cream">#f7f5ca</color>
+
 
 </resources>
